--- a/index.html
+++ b/index.html
@@ -1372,6 +1372,14 @@ quedará un código demasiado extenso</p></td>
 <td class="tableblock halign-left valign-top"><p class="tableblock">Clases grandes</p></td>
 <td class="tableblock halign-left valign-top"><p class="tableblock">Tenemos clases con mucha información, lo que provoca que, en una modificación que les afecte, tendremos dificultades para codificarlos</p></td>
 </tr>
+<tr>
+<td class="tableblock halign-left valign-top"><p class="tableblock">Dependencias que no se usan</p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">Actualmente tenemos instaladas dependencias que no usamos. Esto puede provocar más vulnerabilidades en la aplicación que nos podríamos ahorrar</p></td>
+</tr>
+<tr>
+<td class="tableblock halign-left valign-top"><p class="tableblock">Duplicidad de código</p></td>
+<td class="tableblock halign-left valign-top"><p class="tableblock">Hay clases con código repetido que podría refactorizar</p></td>
+</tr>
 </tbody>
 </table>
 <div style="page-break-after: always;"></div>
